--- a/MVVM/View/CharacterCreationWindow.xaml
+++ b/MVVM/View/CharacterCreationWindow.xaml
@@ -21,9 +21,6 @@
         <conv:SocialAndBackgroundToButtonContentConverter x:Key="SocialAndBackgroundToButtonContentConverter"/>
         <conv:BoolToVisibilityConverter x:Key="BoolToVisibilityConverter"/>
         <conv:ConflictItemToTooltipContentConverter x:Key="ConflictItemToTooltipContentConverter"/>
-
-
-        
     </Window.Resources>
     <Border BorderBrush="{StaticResource EXPDarkBlueBrush}" BorderThickness="3">
         <Grid>
@@ -42,6 +39,9 @@
                 </DataTemplate>
                 <DataTemplate DataType="{x:Type vm:DrivesViewModel}">
                     <local:DrivesView/>
+                </DataTemplate>
+                <DataTemplate DataType="{x:Type vm:CharacterFinalizationViewModel}">
+                    <local:CharacterFinalizationView/>
                 </DataTemplate>
             </Grid.Resources>
             <Grid.RowDefinitions>
@@ -191,8 +191,9 @@
                     <TextBlock HorizontalAlignment="Center" Foreground="{StaticResource EXPLightBlueBrush}" FontStyle="Italic" Margin="0,1"/>
                     <custom:CutCorner BorderCuts="0,1,1,0" Margin="5,1" RenderOptions.EdgeMode="Aliased">
                         <RadioButton BorderThickness="0" VerticalContentAlignment="Center" HorizontalContentAlignment="Stretch" 
-                                 GroupName="creationSteps" 
-                                 Style="{DynamicResource ExpanseToggleButton}" >
+                                 GroupName="creationSteps"
+                                 Style="{DynamicResource ExpanseToggleButton}" 
+                                 Command="{Binding NavigateToCharacterFinalization}">
                             <Grid Margin="2">
                                 <TextBlock Text="Finalize" HorizontalAlignment="Center" 
                                      Foreground="{Binding Path=(TextElement.Foreground), RelativeSource={RelativeSource AncestorType={x:Type ContentPresenter}}}"
