--- a/TheExpanseRPG/MVVM/View/AllRandomAttributeRollView.xaml
+++ b/TheExpanseRPG/MVVM/View/AllRandomAttributeRollView.xaml
@@ -44,57 +44,111 @@
                     BorderThickness="1" BorderBrush="{StaticResource EXPLightBlueBrush}" Margin="0,5,0,5"/>
 
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" >
-                    <Grid>
-                        <Label Content="Accuracy" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding AccuracyRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Accuracy" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding AccuracyBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
+
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="1" >
-                    <Grid>
-                        <Label Content="Constitution" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding ConstitutionRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Constitution" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding ConstitutionBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="2" >
                     <Grid>
-                        <Label Content="Fighting" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding FightingRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Fighting" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding FightingBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="3" >
                     <Grid>
-                        <Label Content="Communication" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding CommunicationRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Communication" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding CommunicationBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="4" >
-                    <Grid>
-                        <Label Content="Dexterity" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding DexterityRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Dexterity" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding DexterityBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="5" >
-                    <Grid>
-                        <Label Content="Intelligence" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding IntelligenceRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Intelligence" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding IntelligenceBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
+
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="6" >
-                    <Grid>
-                        <Label Content="Perception" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding PerceptionRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+
+
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Perception" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding PerceptionBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
+
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="7" >
-                    <Grid>
-                        <Label Content="Strength" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding StrengthRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Strength" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding StrengthBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
+
                 </custom:CutCorner>
                 <custom:CutCorner Margin="0,5,0,0" HasShadow="0" BorderBrush="Black" Fill="Black" BorderThickness="0" BorderCuts="1,0,0,0" Grid.Row="8" >
-                    <Grid>
-                        <Label Content="Willpower" HorizontalAlignment="Center"/>
-                        <!--<Label Content="{Binding WillpowerRoll}" Foreground="Gray" HorizontalAlignment="Right"/>-->
+
+                    <Grid >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="1*"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="1*"/>
+                        </Grid.ColumnDefinitions>
+                        <Label Content="Willpower" Grid.Column="1" HorizontalAlignment="Center"/>
+                        <Label Content="{Binding WillpowerBonuses}" Padding="0" Foreground="LightGreen" ContentStringFormat="+{0}" Grid.Column="2" HorizontalAlignment="Left"/>
                     </Grid>
                 </custom:CutCorner>
 
